		preprocessors have been ported to octave-modular.
		- Minor documentation updates.
		- Unconditionally disable swig director. This reduces wrapper code size
		and compile time and also speeds up calls to virtual functions *a lot*.
		Expect big speed improvements if you were using the python-modular
		interface.
	* Bugfixes:
		- Include missing files in documentation.

2008-04-12  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.0
	* This release contains several major enhancements:
		- The static R,octave,matlab,python interfaces have been rewritten from
		scratch simplifying future extensions. They now use the same syntax and
		support the same set of shogun commands.
		- Toy examples describing the use of kernels, classifier,
		distributions, features, distances, regression and preprocessors
		for the static python, R, octave and matlab interface have been added.
		- Improved user documentation
		- Support for ACML and Intel MKL
	* New methods:
		- POIMs for python-modular interface
	* Bugfixes:
		- Fixed memory leaks in Classifiers, Kernels, Distributions
		- Fixed severale delete[]/free mismatches
		- Fixed reading and writing of svm light format
		- Enable ctrl-c support in octave

2008-02-19  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.5.1
	* This release contains minor bugfixes
		- Allow building w/o doxygen
		- Code cleanups
		- Support newer lapack/atlas/blas
	* New methods:
		- Added several performance measures
		- SVMSGD
		- Efficient reading/writing of svmlight format

2008-01-31  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.5.0
	* This release contains several major enhancements:
		- Full fledged test suite for python-modular interface
		- Toy examples describing the use of kernels, classifier,
		distributions, features, distances, regression and preprocessors
		for the python-modular interface
		- Doxygen generated documentation for python-modular interface